--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    output_at = term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value) + term_output([list_of_terms[1][0], list_of_terms[1][1]], x_value) \n",
-    "    return output_at #need to find a way to simply sum(term_output) over the list_of_terms "
+    "    return output_at #need to find a way to simply sum(term_output) over the list_of+"
    ]
   },
   {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,62 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "mode": "lines",
-         "name": "data",
-         "text": [],
-         "type": "scatter",
-         "uid": "ad4d96c8-ff75-11e8-87d6-01ac8c9943fb",
-         "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5
-         ],
-         "y": [
-          15,
-          19,
-          23,
-          27,
-          31,
-          35
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"2f97b8bc-fa1e-43c1-bac7-40550479d7b7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2f97b8bc-fa1e-43c1-bac7-40550479d7b7\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"ad519cf0-ff75-11e8-87d6-01ac8c9943fb\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"2f97b8bc-fa1e-43c1-bac7-40550479d7b7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2f97b8bc-fa1e-43c1-bac7-40550479d7b7\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"ad519cf0-ff75-11e8-87d6-01ac8c9943fb\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plotly\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
