Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,8 @@
    "source": [
     "def term_output(term, input_value):\n",
     "    x = term[0][0] \n",
-    "    y = term[0][1] \n",
+    "    y = term[0][1]\n",
+    "    input_value = z\n",
     "    term_output = x(input_value)**y\n",
     "    return term_output"
    ]
