Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return term_ouput([list_of_terms], x_value) "
+    "    output_at = list(map(lambda output_at: term_ouput(list_of_terms, x_value), list_of_terms)) \n",
+    "    return sum(output_at)"
    ]
   },
   {
