Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value), list_of_terms)) \n",
-    "    return return out"
+    "    output_at = list(map(lambda output_at: term_output(list_of_terms[0], x_value), list_of_terms)) \n",
+    "    return output_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54"
+       "[27, 27]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
