Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "12"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,18 +185,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    output_at = list(map(lambda output_at: term_output(list_of_terms[0], x_value), list_of_terms)) \n",
-    "    return output_at"
+    "    return sumoutput_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[27, 27]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
