Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    output_at = list(map(lambda output_at: term_output(list_of_terms[0], x_value), list_of_terms)) \n",
-    "    return sumoutput_at"
+    "    return sum(output_at)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[27, 27]"
+       "54"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
