Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0], list_of_terms[1], x_value), list_of_terms))  \n",
+    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[][]], x_value), list_of_terms))  \n",
     "    return output_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[27, 27, -11, -11]"
+       "[1.6935087808430286e-05, 1.6935087808430286e-05]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
