Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,27 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output_at = list(map(lambda output_at: term_output([term[0][0], term[1][1]], x_value), list_of_terms))  \n",
+    "    output_at = list(map(lambda output_at: term_output([list_of_terms[0][0], list_of_terms[0][1]], x_value), list_of_terms))  \n",
     "    return output_at"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-11, -11]"
+       "[27, 27]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
